--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -17,24 +17,28 @@
     <!-- Image and name container -->
     <div style="text-align: center">
       <img loading="lazy" src="./images/dp.jpeg"
-        class="portrait w3-topbar w3-bottombar w3-rightbar w3-leftbar w3-border-dark-grey"
-        alt="Muhammad Ahsan" style="border-radius: 50%;">
+        class="portrait w3-topbar w3-bottombar w3-rightbar w3-leftbar w3-border-dark-grey" alt="Muhammad Ahsan"
+        style="border-radius: 50%;">
       <h1 class="name"><span class="name w3-padding w3-round" style="font-weight: bolder;">Hello, It's me Ahsan</span>
       </h1>
-      <h2 class="subtext name w3-padding w3-round" style="font-weight: bolder;">SEE WHAT I'M UP TO!</h2>
-        <!-- <i data-feather="arrow-down-circle"></i> -->
+      <h2 class="subtext name w3-padding w3-round" style="font-weight: bolder;">Passionate about fullstack web
+        development!</h2>
+      <!-- <i data-feather="arrow-down-circle"></i> -->
     </div>
-    <br><br>
+
     <!-- Links section 1 -->
     <div class="links-container">
       <a href="https://github.com/ahsonsheikh" class="w3-button w3-round w3-brown w3-hover-blue-grey link skew-2"
         target="_blank"><span class="skew-text-2">Check my Work!</span></a>
+      <a href="./images/Ahsan_CV_Salt_202212.pdf"
+        class="w3-button w3-round w3-light-blue w3-hover-blue-grey link skew-1" target="_blank">
+        <span class="skew-text-1">Check my Resumé!</span></a>
       <a href="https://www.facebook.com/ahsonsheikh/" class="w3-button w3-round w3-blue w3-hover-blue-grey link skew-1"
         target="_blank"><span class="skew-text-1">Check my Facebook!</span></a>
       <a href="https://twitter.com/ahsonsheikh" class="w3-button w3-round w3-blue w3-hover-blue-grey link skew-1"
         target="_blank"><span class="skew-text-1">Check my Twitter!</span></a>
-      <a href="https://twitter.com/ahsonsheikh" class="w3-button w3-round w3-light-blue w3-hover-blue-grey link skew-1"
-        target="_blank"><span class="skew-text-1">Check my Blog!</span></a>
+
+
       <!-- <i data-feather="arrow-up-circle"></i> -->
     </div>
     <!-- Footer. This section contains an ad for W3Schools Spaces. You can leave it to support us. -->
