--- a/MilkStore/Client-reactts/public/index.html
+++ b/MilkStore/Client-reactts/public/index.html
@@ -6,43 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <!-- <meta name="description" content="Find many products in this milk cart powered with React.js & TypeScript">
-    <meta name="og:title" content="milk Cart">
-    <meta name="og:description" content="Find many products in this milk cart powered with React.js & TypeScript">
-    <meta name="og:image" content="./thumbnail.jpg">
-    <meta property="og:url" content="https://milk-cart-juarez.netlify.app/">
-    <meta property="og:site_name" content="milk Cart" />
-
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@juarez1_irving"/>
-    <meta name="twitter:creator" content="@juarez1_irving"/>
-    <meta name="twitter:title" content="milk Cart"/>
-    <meta name="twitter:description" content="Find any product in this store, powered with React and TS"/>
-    <meta
-      name="twitter:image"
-      content="./thumbnail.jpg"
-    /> -->
-
-
     <meta
       name="description"
-      content="Emulating an e-commerce shop with React.js, TypeScript and Fakestore API"
+      content="An e-commerce shop with React.js, TypeScript and API"
     />
     <meta
       name="keywords"
-      content="e-commerce, fakestore api, react.js, typescript, UI"
+      content="e-commerce, api, react.js, typescript, UI"
     />
-    <meta property="og:title" content="milk Cart" />
-    <meta
-      property="og:description"
-      content="Emulating an e-commerce shop with React.js, TypeScript and Fakestore API."
-    />
-    <meta property="og:image" content="https://cdn-images-1.medium.com/max/800/1*e3itUM_o1V0nuuLt73MJ0A.jpeg" />
-    <meta property="og:url" content="https://milk-cart-juarez.netlify.app/" />
-    <meta name="twitter:card" content="summary_large_image" />
-
-
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
